--- a/weekfivetoeight.ipynb
+++ b/weekfivetoeight.ipynb
@@ -9,13 +9,13 @@
    "source": [
     "# Week 5 Reflection Question 1 \n",
     "\n",
-    "1. Draw a diagram for the following negative feedback loop:\n",
+    "1. # Draw a diagram for the following negative feedback loop:\n",
     "\n",
-    "Sweating causes body temperature to decrease.  High body temperature causes sweating.\n",
+    "# Sweating causes body temperature to decrease.  High body temperature causes sweating.\n",
     "\n",
-    "A negative feedback loop means that one thing increases another while the second thing decreases the first.\n",
+    "# A negative feedback loop means that one thing increases another while the second thing decreases the first.\n",
     "\n",
-    "Remember that we are using directed acyclic graphs where two things cannot directly cause each other.\n",
+    "# Remember that we are using directed acyclic graphs where two things cannot directly cause each other.\n",
     "\n"
    ]
   },
@@ -242,7 +242,62 @@
     "# Possible answer: We are likely to find the item with the most extreme difference, which may be high simply due to randomness.\n",
     "# (Please explain / justify this answer, or give a different one if you can think of one.)\n",
     "\n",
-    "# We are likely to find the item with the most extreme difference, which may be high simply due to randomness. \n"
+    "# Answer We are likely to find the item with the most extreme difference, which may be high simply due to randomness. \n",
+    "# Each unit’s outcome includes random noise, not just the true treatment effect. When we pick an outlier, it doesn’t represent the average case — it may just be a fluke. \n",
+    "# This can lead to an overestimate of the Marginal Treatment Effect (MTE), making the result biased and misleading. \n",
+    "# To make a valid estimate, we need to base it on the true treatment effect, not random extremes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "827dcfa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Week 6 Reflection Question 2 \n",
+    "\n",
+    "# Propose a solution that remedies this problem and write some code that implements your solution.  It's very important here that you clearly explain what your solution will do.\n",
+    "# Possible answer: maybe we could take the 90th percentile of the treatment effect and use it as a proxy for the Marginal Treatment Effect.\n",
+    "# (Either code this answer or choose a different one.)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b2840ec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimated Marginal Treatment Effect (90th percentile): 9.49\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Week 6 Reflection Question 2  Answer Code \n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "\n",
+    "n = 1000\n",
+    "Y0 = np.random.normal(loc=50, scale=10, size=n)   \n",
+    "true_effect = np.random.uniform(0, 10, size=n)    \n",
+    "Y1 = Y0 + true_effect + np.random.normal(0, 2, size=n)  \n",
+    "\n",
+    "\n",
+    "individual_effects = Y1 - Y0\n",
+    "\n",
+    "\n",
+    "mte_estimate = np.percentile(individual_effects, 90)\n",
+    "\n",
+    "print(f\"Estimated Marginal Treatment Effect (90th percentile): {mte_estimate:.2f}\")"
    ]
   }
  ],
