--- a/weekfivetoeight.ipynb
+++ b/weekfivetoeight.ipynb
@@ -299,6 +299,193 @@
     "\n",
     "print(f\"Estimated Marginal Treatment Effect (90th percentile): {mte_estimate:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da23cb9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Week 7 Reflection Question 1 \n",
+    "# Create a linear regression model involving a confounder that is left out of the model.  \n",
+    "# Show whether the true correlation between $$X$$ and $$Y$$ is overestimated, underestimated, or neither.  \n",
+    "# Explain in words why this is the case for the given coefficients you have chosen.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25755e11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimated coefficient of X (without W): 3.39\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Week 7 Reflection Question 1  Answer Code\n",
+    "\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# Set seed for reproducibility\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Number of samples\n",
+    "n = 500\n",
+    "\n",
+    "# Simulate hidden confounder W (not used in model)\n",
+    "W = np.random.normal(0, 1, n)\n",
+    "\n",
+    "# Simulate X, correlated with W\n",
+    "X = 0.7 * W + np.random.normal(0, 1, n)\n",
+    "\n",
+    "# Simulate Y, actually affected by both X and W\n",
+    "Y = 2 * X + 3 * W + np.random.normal(0, 1, n)\n",
+    "\n",
+    "# In here X and W are positively correlated \n",
+    "\n",
+    "# Fit linear regression with X only (omit W)\n",
+    "X_reshaped = X.reshape(-1, 1)\n",
+    "model = LinearRegression().fit(X_reshaped, Y)\n",
+    "\n",
+    "# Get coefficient of X\n",
+    "coef_X = model.coef_[0]\n",
+    "\n",
+    "print(f\"Estimated coefficient for X (without W): {coef_X:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b60f3f91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Week 7 Reflection Question 1  Answer\n",
+    "# Show whether the true correlation between $$X$$ and $$Y$$ is overestimated, underestimated, or neither.  \n",
+    "# Explain in words why this is the case for the given coefficients you have chosen.\n",
+    "\n",
+    "# When we ran the regression without W (the confounder) the estimated coefficient for X is 3.39 \n",
+    "# W is the confounder because it affects both X and Y \n",
+    "# X is positively correlated with W, and W also increases Y\n",
+    "# When we leave W out of the model, its positive influence on Y gets wrongly credited to X\n",
+    "# The effect of X on Y looks too big when we leave out W. That's because W increases both X and Y, so the model thinks X is doing more than it really is.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e39f9ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Week 7 Reflection Question 2 \n",
+    "# erform a linear regression analysis in which one of the coefficients is zero, e.g.\n",
+    "\n",
+    "# W = [noise]\n",
+    "# X = [noise]\n",
+    "# Y = 2 * X + [noise]\n",
+    "\n",
+    "# And compute the p-value of a coefficient - in this case, the coefficient of W.  \n",
+    "# (This is the likelihood that the estimated coefficient would be as high or low as it is, given that the actual coefficient is zero.)\n",
+    "# If the p-value is less than 0.05, this ordinarily means that we judge the coefficient to be nonzero (incorrectly, in this case.)\n",
+    "# Run the analysis 1000 times and report the best (smallest) p-value.  \n",
+    "# If the p-value is less than 0.05, does this mean the coefficient actually is nonzero?  What is the problem with repeating the analysis?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3959e5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smallest p-value for W (should be null): 0.00047\n",
+      "\n",
+      "This p-value is below 0.05 — but W has no real effect on Y.\n",
+      "This is a false positive caused by repeating the test many times.\n",
+      "It's an example of the multiple comparisons problem.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Week 7 Reflection Question 2 Code \n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Set seed for reproducibility\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "n = 100            # sample size\n",
+    "repeats = 1000     # number of simulations\n",
+    "p_values = []\n",
+    "\n",
+    "# Run the analysis 1000 times\n",
+    "for _ in range(repeats):\n",
+    "    # Step 1: Simulate data\n",
+    "    W = np.random.normal(0, 1, n)\n",
+    "    X = np.random.normal(0, 1, n)\n",
+    "    noise = np.random.normal(0, 1, n)\n",
+    "    Y = 2 * X + noise  # W has no effect\n",
+    "\n",
+    "    # Step 2: Fit linear regression Y ~ X + W\n",
+    "    XW = np.column_stack((X, W))\n",
+    "    model = LinearRegression().fit(XW, Y)\n",
+    "    y_pred = model.predict(XW)\n",
+    "\n",
+    "    # Step 3: Calculate residuals and standard error\n",
+    "    residuals = Y - y_pred\n",
+    "    dof = n - 3  # 2 predictors + intercept\n",
+    "    mse = np.sum(residuals**2) / dof\n",
+    "\n",
+    "    # Add column of 1s for intercept\n",
+    "    XW_with_intercept = np.column_stack((np.ones(n), XW))\n",
+    "    cov_matrix = np.linalg.inv(XW_with_intercept.T @ XW_with_intercept)\n",
+    "    var_b = mse * np.diag(cov_matrix)  # Variance of each coefficient\n",
+    "    se_b = np.sqrt(var_b)              # Standard errors\n",
+    "\n",
+    "    # Step 4: Get t-statistic and p-value for W (index 2)\n",
+    "    t_stat_W = model.coef_[1] / se_b[2]\n",
+    "    p_value_W = 2 * (1 - stats.t.cdf(np.abs(t_stat_W), df=dof))\n",
+    "    p_values.append(p_value_W)\n",
+    "\n",
+    "# Step 5: Report the smallest p-value\n",
+    "min_p = min(p_values)\n",
+    "print(f\"Smallest p-value for W (should be null): {min_p:.5f}\")\n",
+    "\n",
+    "if min_p < 0.05:\n",
+    "    print(\"\\nThis p-value is below 0.05 — but W has no real effect on Y.\")\n",
+    "    print(\"This is a false positive caused by repeating the test many times.\")\n",
+    "    print(\"It's an example of the multiple comparisons problem.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c36ea875",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Week 7 Reflection Question 2 Answer \n",
+    "# If the p-value is less than 0.05, this ordinarily means that we judge the coefficient to be nonzero (incorrectly, in this case.)\n",
+    "# Run the analysis 1000 times and report the best (smallest) p-value.  \n",
+    "# If the p-value is less than 0.05, does this mean the coefficient actually is nonzero?  What is the problem with repeating the analysis?\n",
+    "\n",
+    "# Anytime the p-value is less than 0.05 the result is statistically significant, the null hypothesis is true \n",
+    "# This is just a probability it does not necessarily mean the coefficient is non - zeo \n",
+    "# When a test is run many times the result will appear significant by pure chance. Even if there is no real effect \n",
+    "# Picking the smallest p-value from the many runs does not lead to the right trustworthy answer "
+   ]
   }
  ],
  "metadata": {
