--- a/weekfivetoeight.ipynb
+++ b/weekfivetoeight.ipynb
@@ -486,6 +486,130 @@
     "# When a test is run many times the result will appear significant by pure chance. Even if there is no real effect \n",
     "# Picking the smallest p-value from the many runs does not lead to the right trustworthy answer "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bfa2a2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Week 8 Reflection "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a0839d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question 1 \n",
+    "# Using homework_8.1.csv, find the Average treatment effect with inverse probability weighting. \n",
+    "# Then, include your code and a written explanation of your work (mentioning any choices or strategies you made in writing the code) in your homework reflection.  \n",
+    "\n",
+    "\n",
+    "\n",
+    "Here are some steps to follow: \n",
+    "\n",
+    "\n",
+    "\n",
+    "* Estimate the propensity scores using logistic regression. Fit the model so that the Z values predict ﻿X﻿. \n",
+    "\n",
+    "* Use the model to predict the propensity scores (e.g., using predict_proba if you are using sklearn). \n",
+    "\n",
+    "* Calculate inverse probability weights (﻿1 over P﻿ for ﻿X equals 1﻿ and ﻿fraction numerator 1 over denominator 1 minus P end fraction﻿ for ﻿X equals 0﻿). \n",
+    "\n",
+    "* Estimate the average treatment effect (the Y difference between ﻿X equals 1﻿ and ﻿X equals 0﻿, using the appropriate weights for each). \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b99ad037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load dataset\n",
+    "df = pd.read_csv(\"/mnt/data/homework_8.1.csv\")\n",
+    "df = df.drop(columns=[\"Unnamed: 0\"])  # Drop index column\n",
+    "\n",
+    "# Step 1: Estimate propensity scores (predict X from Z)\n",
+    "model = LogisticRegression()\n",
+    "model.fit(df[['Z']], df['X'])\n",
+    "\n",
+    "# Step 2: Predict propensity scores\n",
+    "propensity_scores = model.predict_proba(df[['Z']])[:, 1]\n",
+    "\n",
+    "# Step 3: Calculate inverse probability weights\n",
+    "df['weights'] = np.where(df['X'] == 1,\n",
+    "                         1 / propensity_scores,\n",
+    "                         1 / (1 - propensity_scores))\n",
+    "\n",
+    "# Step 4: Weighted averages\n",
+    "treated = df[df['X'] == 1]\n",
+    "control = df[df['X'] == 0]\n",
+    "\n",
+    "weighted_mean_treated = np.average(treated['Y'], weights=treated['weights'])\n",
+    "weighted_mean_control = np.average(control['Y'], weights=control['weights'])\n",
+    "\n",
+    "# Final ATE\n",
+    "ate = weighted_mean_treated - weighted_mean_control\n",
+    "print(\"ATE (IPW):\", ate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "573318aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "from scipy.spatial.distance import mahalanobis\n",
+    "from numpy.linalg import inv\n",
+    "import numpy as np\n",
+    "\n",
+    "# Step 1: Load the dataset\n",
+    "df = pd.read_csv(\"/mnt/data/homework_8.2.csv\")\n",
+    "\n",
+    "# Step 2: Drop index column if present\n",
+    "df = df.drop(columns=[\"Unnamed: 0\"])\n",
+    "\n",
+    "# Step 3: Separate treated and untreated groups\n",
+    "treated = df[df['X'] == 1].reset_index(drop=True)\n",
+    "untreated = df[df['X'] == 0].reset_index(drop=True)\n",
+    "\n",
+    "# Step 4: Compute inverse covariance matrix for Z1 and Z2\n",
+    "Z = df[['Z1', 'Z2']].values\n",
+    "cov_matrix = np.cov(Z.T)\n",
+    "inv_cov_matrix = inv(cov_matrix)\n",
+    "\n",
+    "# Step 5: Perform Mahalanobis matching (with replacement)\n",
+    "matched_Y_diffs = []\n",
+    "\n",
+    "for i in range(len(treated)):\n",
+    "    treated_z = treated.loc[i, ['Z1', 'Z2']].values\n",
+    "    distances = untreated[['Z1', 'Z2']].apply(\n",
+    "        lambda row: mahalanobis(treated_z, row.values, inv_cov_matrix), axis=1)\n",
+    "    \n",
+    "    # Step 6: Find the closest untreated unit and compute Y difference\n",
+    "    closest_idx = distances.idxmin()\n",
+    "    y_diff = treated.loc[i, 'Y'] - untreated.loc[closest_idx, 'Y']\n",
+    "    matched_Y_diffs.append(y_diff)\n",
+    "\n",
+    "# Step 7: Calculate the ATE\n",
+    "ate_mahalanobis = np.mean(matched_Y_diffs)\n",
+    "print(\"ATE (Mahalanobis Matching):\", ate_mahalanobis)\n",
+    " "
+   ]
   }
  ],
  "metadata": {
