--- a/weekfivetoeight.ipynb
+++ b/weekfivetoeight.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "b2840ec1",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "25755e11",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimated coefficient of X (without W): 3.39\n"
+      "Estimated coefficient for X (without W): 3.39\n"
      ]
     }
    ],
@@ -333,28 +333,28 @@
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "# Set seed for reproducibility\n",
+    "\n",
     "np.random.seed(42)\n",
     "\n",
-    "# Number of samples\n",
+    "\n",
     "n = 500\n",
     "\n",
-    "# Simulate hidden confounder W (not used in model)\n",
+    "\n",
     "W = np.random.normal(0, 1, n)\n",
     "\n",
-    "# Simulate X, correlated with W\n",
+    "\n",
     "X = 0.7 * W + np.random.normal(0, 1, n)\n",
     "\n",
-    "# Simulate Y, actually affected by both X and W\n",
+    "\n",
     "Y = 2 * X + 3 * W + np.random.normal(0, 1, n)\n",
     "\n",
-    "# In here X and W are positively correlated \n",
+    " \n",
     "\n",
-    "# Fit linear regression with X only (omit W)\n",
+    "\n",
     "X_reshaped = X.reshape(-1, 1)\n",
     "model = LinearRegression().fit(X_reshaped, Y)\n",
     "\n",
-    "# Get coefficient of X\n",
+    "\n",
     "coef_X = model.coef_[0]\n",
     "\n",
     "print(f\"Estimated coefficient for X (without W): {coef_X:.2f}\")"
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f3959e5c",
    "metadata": {},
    "outputs": [
@@ -423,43 +423,43 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from scipy import stats\n",
     "\n",
-    "# Set seed for reproducibility\n",
+    "\n",
     "np.random.seed(42)\n",
     "\n",
-    "n = 100            # sample size\n",
-    "repeats = 1000     # number of simulations\n",
+    "n = 100           \n",
+    "repeats = 1000     \n",
     "p_values = []\n",
     "\n",
-    "# Run the analysis 1000 times\n",
+    "\n",
     "for _ in range(repeats):\n",
-    "    # Step 1: Simulate data\n",
+    "   \n",
     "    W = np.random.normal(0, 1, n)\n",
     "    X = np.random.normal(0, 1, n)\n",
     "    noise = np.random.normal(0, 1, n)\n",
-    "    Y = 2 * X + noise  # W has no effect\n",
+    "    Y = 2 * X + noise  \n",
     "\n",
-    "    # Step 2: Fit linear regression Y ~ X + W\n",
+    "    \n",
     "    XW = np.column_stack((X, W))\n",
     "    model = LinearRegression().fit(XW, Y)\n",
     "    y_pred = model.predict(XW)\n",
     "\n",
-    "    # Step 3: Calculate residuals and standard error\n",
+    "    \n",
     "    residuals = Y - y_pred\n",
-    "    dof = n - 3  # 2 predictors + intercept\n",
+    "    dof = n - 3  \n",
     "    mse = np.sum(residuals**2) / dof\n",
     "\n",
-    "    # Add column of 1s for intercept\n",
+    "    \n",
     "    XW_with_intercept = np.column_stack((np.ones(n), XW))\n",
     "    cov_matrix = np.linalg.inv(XW_with_intercept.T @ XW_with_intercept)\n",
-    "    var_b = mse * np.diag(cov_matrix)  # Variance of each coefficient\n",
-    "    se_b = np.sqrt(var_b)              # Standard errors\n",
+    "    var_b = mse * np.diag(cov_matrix)  \n",
+    "    se_b = np.sqrt(var_b)             \n",
+    "    \n",
     "\n",
-    "    # Step 4: Get t-statistic and p-value for W (index 2)\n",
     "    t_stat_W = model.coef_[1] / se_b[2]\n",
     "    p_value_W = 2 * (1 - stats.t.cdf(np.abs(t_stat_W), df=dof))\n",
     "    p_values.append(p_value_W)\n",
     "\n",
-    "# Step 5: Report the smallest p-value\n",
+    "\n",
     "min_p = min(p_values)\n",
     "print(f\"Smallest p-value for W (should be null): {min_p:.5f}\")\n",
     "\n",
@@ -504,23 +504,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Question 1 \n",
+    "# Question 1 From Week 8 Quiz \n",
     "# Using homework_8.1.csv, find the Average treatment effect with inverse probability weighting. \n",
     "# Then, include your code and a written explanation of your work (mentioning any choices or strategies you made in writing the code) in your homework reflection.  \n",
     "\n",
     "\n",
     "\n",
-    "Here are some steps to follow: \n",
+    "# Here are some steps to follow: \n",
     "\n",
     "\n",
+    "# Estimate the propensity scores using logistic regression. Fit the model so that the Z values predict ﻿X﻿. \n",
     "\n",
-    "* Estimate the propensity scores using logistic regression. Fit the model so that the Z values predict ﻿X﻿. \n",
+    "# Use the model to predict the propensity scores (e.g., using predict_proba if you are using sklearn). \n",
     "\n",
-    "* Use the model to predict the propensity scores (e.g., using predict_proba if you are using sklearn). \n",
+    "# Calculate inverse probability weights (﻿1 over P﻿ for ﻿X equals 1﻿ and ﻿fraction numerator 1 over denominator 1 minus P end fraction﻿ for ﻿X equals 0﻿). \n",
     "\n",
-    "* Calculate inverse probability weights (﻿1 over P﻿ for ﻿X equals 1﻿ and ﻿fraction numerator 1 over denominator 1 minus P end fraction﻿ for ﻿X equals 0﻿). \n",
-    "\n",
-    "* Estimate the average treatment effect (the Y difference between ﻿X equals 1﻿ and ﻿X equals 0﻿, using the appropriate weights for each). \n",
+    "# Estimate the average treatment effect (the Y difference between ﻿X equals 1﻿ and ﻿X equals 0﻿, using the appropriate weights for each). \n",
     "\n",
     "\n"
    ]
@@ -530,38 +529,84 @@
    "execution_count": null,
    "id": "b99ad037",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATE: 2.2743411898510133\n"
+     ]
+    }
+   ],
    "source": [
+    "# Code for Question 1 Week 8 Quiz \n",
     "import pandas as pd\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "import numpy as np\n",
     "\n",
-    "# Load dataset\n",
-    "df = pd.read_csv(\"/mnt/data/homework_8.1.csv\")\n",
-    "df = df.drop(columns=[\"Unnamed: 0\"])  # Drop index column\n",
     "\n",
-    "# Step 1: Estimate propensity scores (predict X from Z)\n",
+    "df = pd.read_csv(\"homework_8.1.csv\")\n",
+    "\n",
+    "\n",
     "model = LogisticRegression()\n",
     "model.fit(df[['Z']], df['X'])\n",
     "\n",
-    "# Step 2: Predict propensity scores\n",
+    "\n",
     "propensity_scores = model.predict_proba(df[['Z']])[:, 1]\n",
     "\n",
-    "# Step 3: Calculate inverse probability weights\n",
+    "\n",
     "df['weights'] = np.where(df['X'] == 1,\n",
     "                         1 / propensity_scores,\n",
     "                         1 / (1 - propensity_scores))\n",
     "\n",
-    "# Step 4: Weighted averages\n",
+    "\n",
     "treated = df[df['X'] == 1]\n",
     "control = df[df['X'] == 0]\n",
     "\n",
     "weighted_mean_treated = np.average(treated['Y'], weights=treated['weights'])\n",
     "weighted_mean_control = np.average(control['Y'], weights=control['weights'])\n",
     "\n",
-    "# Final ATE\n",
+    "\n",
     "ate = weighted_mean_treated - weighted_mean_control\n",
-    "print(\"ATE (IPW):\", ate)"
+    "print(\"ATE:\", ate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ae5671c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The Challenge and Insight for Question 1\n",
+    "\n",
+    "\n",
+    "# I used logistic regression to get propensity scores, then applied inverse probability weighting to estimate the ATE.\n",
+    "# The main challenge was making sure the correct probabilities were used. \n",
+    "# It showed how weighting helps estimate effects without randomization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ea92cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question 2 From Week 8 Quiz \n",
+    "\n",
+    "# Using homework_8.2.csv, match all treated items to the single nearest untreated item using the Mahalanobis distance. \n",
+    "# (Do this with replacement — the same untreated item can be used again.) \n",
+    "\n",
+    "\n",
+    "\n",
+    "# Use the Mahalanobis function from scipy.spatial.distance \n",
+    "\n",
+    "# For the inverse covariance matrix, use all ﻿Z 1﻿ values and all ﻿Z 2﻿ values, make them into a ﻿2 x N﻿ matrix, find its ﻿2 x 2﻿ covariance, and invert. \n",
+    "\n",
+    "\n",
+    "\n",
+    "# Then, the ATE is closest to"
    ]
   },
   {
@@ -569,30 +614,37 @@
    "execution_count": null,
    "id": "573318aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATE: 3.4376789979126094\n"
+     ]
+    }
+   ],
    "source": [
-    "# Import necessary libraries\n",
+    "# Code for Question 2 Week 8 Quiz \n",
     "import pandas as pd\n",
     "from scipy.spatial.distance import mahalanobis\n",
     "from numpy.linalg import inv\n",
     "import numpy as np\n",
     "\n",
-    "# Step 1: Load the dataset\n",
-    "df = pd.read_csv(\"/mnt/data/homework_8.2.csv\")\n",
     "\n",
-    "# Step 2: Drop index column if present\n",
-    "df = df.drop(columns=[\"Unnamed: 0\"])\n",
+    "df = pd.read_csv(\"homework_8.2.csv\")\n",
     "\n",
-    "# Step 3: Separate treated and untreated groups\n",
+    "\n",
+    "\n",
+    "\n",
     "treated = df[df['X'] == 1].reset_index(drop=True)\n",
     "untreated = df[df['X'] == 0].reset_index(drop=True)\n",
     "\n",
-    "# Step 4: Compute inverse covariance matrix for Z1 and Z2\n",
+    "\n",
     "Z = df[['Z1', 'Z2']].values\n",
     "cov_matrix = np.cov(Z.T)\n",
     "inv_cov_matrix = inv(cov_matrix)\n",
     "\n",
-    "# Step 5: Perform Mahalanobis matching (with replacement)\n",
+    "\n",
     "matched_Y_diffs = []\n",
     "\n",
     "for i in range(len(treated)):\n",
@@ -600,15 +652,30 @@
     "    distances = untreated[['Z1', 'Z2']].apply(\n",
     "        lambda row: mahalanobis(treated_z, row.values, inv_cov_matrix), axis=1)\n",
     "    \n",
-    "    # Step 6: Find the closest untreated unit and compute Y difference\n",
+    "    \n",
     "    closest_idx = distances.idxmin()\n",
     "    y_diff = treated.loc[i, 'Y'] - untreated.loc[closest_idx, 'Y']\n",
     "    matched_Y_diffs.append(y_diff)\n",
     "\n",
-    "# Step 7: Calculate the ATE\n",
+    "\n",
     "ate_mahalanobis = np.mean(matched_Y_diffs)\n",
-    "print(\"ATE (Mahalanobis Matching):\", ate_mahalanobis)\n",
+    "print(\"ATE:\", ate_mahalanobis)\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fec7bad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The Challenge and Insight for Question 2\n",
+    "\n",
+    "# Matching treated units to controls using Mahalanobis distance taught me how important it is to account for the covariance between variables like Z1 and Z2. \n",
+    "# One challenge was ensuring the covariance matrix was correctly structured and inverted. \n",
+    "# Matching with replacement made things easier\n",
+    "# ATE Value of 3.4 showed the method worked "
    ]
   }
  ],
